--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ speedtest-cli==2.1.3
 git+https://github.com/yt-dlp/yt-dlp@master
 git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
+wget
+yt_dlp
+requests
+youtube_dl
