--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ aiohttp==3.8.3
 numpy==1.24.1
 pillow==9.4.0
 psutil
-pyrogram
-py-tgcalls
+pyrogram==2.0.99
+py-tgcalls==0.9.7
 python-dotenv==0.21.1
 tgcrypto==1.2.5
 speedtest-cli==2.1.3
@@ -13,5 +13,6 @@ git+https://github.com/yt-dlp/yt-dlp@master
 git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
 wget
-
+yt_dlp
 requests
+youtube_dl
