--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "RaviVeyi ダ Music",
     "description": "Pyrogram və Py-Tgcalls ilə Python dilində yazılmış teleqram videoçatları üçün VC Player Botu.",
-    "logo": "https://te.legra.ph/file/f039e00ccd18d625f3771.jpg",
+    "logo": "https://telegra.ph/file/b7e66d35f9e3cc7f22771.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -23,7 +23,7 @@
       },
       "BOT_TOKEN": {
         "description": "Botfather-dən Bot nişanı",
-        "value": "",
+        "value": "6875746501:AAG9-S7mdLH6LZ9U14lA8s7-WizPacUgbxU",
         "required": true
       },
       "OWNER_ID": {
@@ -33,12 +33,12 @@
       },
       "SESSION": {
         "description": "@Telegram-dan piroqram v2 sim seansı",
-        "value": "",
+        "value": "AgAF7JiTaEs5IX_VxQwF9vHwO02iLoJuLfhnGabS-E5foHVsc7gSAUuA7YyJnN4AQsZgsZCI-2sMZ8e5ccSDddyuKuPbKSh1-9csNT6KIPyhaZ6BAboW0oMdd6_uWAGtnhimZOuPd8_PWl-CG_Vhb5N6lSsnt__PFcqc549NABxtQ4UuxukI8-s-8oMSbn-pw3OSmVs0-d4UDxQdZv9fGakBI5O3Jdfex_gCvY8M4r-vsqjCNjkOzaP5k6UlgDkIyjwcmLuSiA9RhLeMDH_O2Ij6dUoKuUmHRo-wP67GIIbXbvKpFCvj41tRDr7aHFc0wn87ouJsaDYfJH-xC1JQTsTBAAAAAZ5TQW8A",
         "required": true
       },
       "SUDO_USERS": {
         "description": "Sudo kimi əlavə etmək istədiyiniz istifadəçi(lər)in istifadəçi id(ləri). Çoxsaylı dəyərlər boşluqla ayrılmalıdır.",
-        "value": "",
+        "value": "5615367098",
         "required": true
       },
       "SUPPORT_CHAT": {
